# prague

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
prague_protocol/: Cargo.toml
prague_protocol/src/: acks.rs  api.rs  error_code.rs  headers.rs  isolation_level.rs  lib.rs  network.rs  produce.rs  records.rs
prague_protocol/src/api/: api_key.rs  mod.rs  prelude.rs
prague_protocol/src/fetch/: mod.rs  prelude.rs  request.rs  response.rs
prague_protocol/src/list_offsets/: mod.rs  request.rs  response.rs
prague_protocol/src/metadata/: mod.rs  request.rs  response.rs
prague_protocol/src/primitives/: mod.rs  prelude.rs
prague_protocol/src/produce/: mod.rs  prelude.rs  request.rs  response.rs
prague_protocol/src/types/: broker.rs  error_checking.rs  field.rs  mod.rs  partition.rs  producer.rs  tagged_fields.rs  time.rs  uuid.rs  var.rs
src/: lib.rs
src/protocol/: api.rs  mod.rs  request.rs  response.rs  status.rs  try_take.rs  types.rs
