[package]
name = "prague"
version = "0.0.0"
edition = "2021"
authors = ["Isaac Corbrey <icorbrey@gmail.com>"]
description = "A client library for Apache Kafka."
repository = "https://github.com/icorbrey/prague"
license = "MIT OR Apache-2.0"
keywords = ["kafka"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
