[package]
name = "prague"
version = "0.0.0"
edition = "2021"
authors = ["Isaac Corbrey <icorbrey@gmail.com>"]
description = "A client library for Apache Kafka."
repository = "https://github.com/icorbrey/prague"
license = "MIT OR Apache-2.0"
keywords = ["kafka"]

[workspace]
members = ["prague_protocol"]

[dependencies]
